--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^4.16.13",
     "axios": "^0.21.4",
     "normalize.css": "^8.0.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
