--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "scripts": {
     "start": "craco start",
-    "build": "craco docs/build",
+    "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject"
   },
